<resources>
    <string name="app_name">DR2NMEA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="text_loc_lon_txt">Lon:</string>
    <string name="text_loc_lat_txt">Lat:</string>
    <string name="text_loc_alt_txt">Alt:</string>
    <string name="text_loc_speed_txt">Speed:</string>
    <string name="text_loc_time_txt">Time:</string>
    <string name="text_loc_date_txt">Date:</string>
    <string name="text_loc_view_txt">View:</string>
    <string name="text_loc_use_txt">Use:</string>
    <string name="text_bt_scan_start">Start Scan</string>
    <string name="text_bt_scan_stop">Stop Scan</string>
    <string name="placeholder_value">---</string>

    <string name="sat_prn">200</string>
    <string name="sat_inuse">T</string>
    <string name="sat_azi">27</string>
    <string name="sat_elev">125</string>
    <string name="sat_snr">55</string>

    <string name="title_nmea">NMEA</string>
    <string name="title_sen">Sensor</string>
    <string name="title_snr">SNR</string>
    <string name="title_bt">BT</string>
    <string name="title_info">INFO</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>


    <string name="msg_exit_app">Press Back again to Exit.</string>
    <string name="msg_snack_bar_start_test">GPS Test Starting</string>
    <string name="msg_snack_bar_stop_test">GPS Test Stopping</string>
    <string name="msg_snack_bar_action">Action</string>
    <string name="msg_dialog_yes">Yes</string>
    <string name="msg_dialog_cancel">Cancel</string>
    <string name="msg_request_permissions">Storage &amp; Location permissions are required.</string>
    <string name="msg_request_permissions_settings">Storage &amp; Location permissions are required. Do you want to goto app settings? </string>
    <string name="msg_gps_not_supported">GPS Not Supported!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_description_keep_screen">Keep screen on when test</string>
    <string name="pref_title_keep_screen">Keep Screen</string>
    <string name="pref_description_nmea_record">Record NMEA message to /sdcard/DR2NMEA</string>
    <string name="pref_title_nmea_record">NMEA Record</string>
    <string name="pref_description_raw_record">Record Measurements message to /sdcard/DR2NMEA</string>
    <string name="pref_title_raw_record">Measurements Record</string>
    <string name="pref_description_sensor_record">Record sensor message to /sdcard/DR2NMEA</string>
    <string name="pref_title_sensor_record">Sensor Record</string>
    <string name="pref_title_device_name">Device Name</string>
    <string name="pref_description_device_name">Device Name</string>
    <string name="pref_title_hack_dual_frequency_support">Hack for dual Frequency Support</string>
    <string name="pref_description_hack_dual_frequency_support">Hack for support dual frequency SNR display</string>

    <string name="pref_title_enable_bt_speed_support">Enable BT Cadence &amp; Speed Sensor</string>
    <string name="pref_description_enable_bt_speed_support">XOSS Bike Cadence Sensor &amp; Speed Sensor</string>

    <string name="pref_title_nmea_generator">NMEA Generator</string>
    <string name="pref_description_nmea_generator">Generate NMEA from LocationManager</string>

    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="enter">Enter</string>

    <string name="connect_fail">connection failed</string>
    <string name="active_disconnected">disconnect</string>
    <string name="disconnected">Connection disconnect</string>
    <string name="pref_description_bt_speed_uuid">UUID of Bike Cadence &amp; Speed Sensor</string>
    <string name="pref_title_bt_speed_uuid">UUID</string>
    <string name="pref_title_wheel_circumference">Wheel Circumference</string>
    <string name="pref_description_wheel_circumference">wheel circumference in meter</string>
</resources>
